--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- 这里是页面内容 -->
       <div class="page__wrap">
         <h1>Jarry Chung</h1>
-        <a href="./css-trick/index.html">CSS Trick</a>
+        <a href="./css-trick">CSS Trick</a>
       </div>
       <div class="page__wrap">Jarry Chung</div>
       <div class="page__wrap">Jarry Chung</div>
