--- a/index.html
+++ b/index.html
@@ -7,26 +7,33 @@
 		<meta name="description" content="This is Jarry Chung's home page. 这是 Jarry Chung 的主页。" />
 		<meta name="keywords" content="Jarry Chung, javascript, css, web design, 个人主页, 个人网站, 好看" />
 		<meta name="author" content="Jarry Chung" />
-		<link rel="shortcut icon" href="./assets/favicon.ico">
+		<link rel="shortcut icon" href="./assets/images/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="./assets/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="./assets/css/global.css" />
 		<link rel="stylesheet" type="text/css" href="./assets/css/index.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>		
 	</head>
 	<body>
-    <!-- 这里放一些元素变量，如 svg -->
 		<main>
       <!-- 这里是页面内容 -->
-      <div class="page__wrap">
-        <h1>Jarry Chung</h1>
-        <a href="./css-trick">CSS Trick</a>
+      <div class="page__wrap home">
+        <div class="logo">
+          <img src="./assets/images/logo.svg" alt="logo">
+        </div>
+        <div class="box">
+          <h1 class="name">Jarry Chung</h1>
+          <p class="intro">A Web developer who loves technology and philosophy.</p>
+          <a class="link" href="https://segmentfault.com/u/jarrychung">Segment Fault</a>
+          <a class="link" href="https://github.com/JarryChung">Github</a>
+        </div>
       </div>
+
       <div class="page__wrap">Jarry Chung</div>
+
       <div class="page__wrap">Jarry Chung</div>
 		</main>
-		<script src="./assets/js/data.js"></script>
-		<script src="./assets/js/data-render.js"></script>
-		<script src="./assets/js/utils.js"></script>
-		<script src="./assets/js/index.js"></script>
+		<script src="./assets/js/data.js" defer></script>
+		<script src="./assets/js/data-render.js" defer></script>
+		<script src="./assets/js/index.js" defer></script>
 	</body>
 </html>
